Fixed gallery on tablet

--- a/scss/sections/_gallery.scss
+++ b/scss/sections/_gallery.scss
@@ -66,12 +66,12 @@
 //     }
 // }
 
-@media (max-width: $bp-tablet-one) {
+@media (max-width: $bp-tablet) {
   .gallery {
     &__item {
       flex: 50%;
     }
-    
+
     &__list {
       max-width: 280px;
       margin: 0 auto;
